--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,5 +75,14 @@
   .backface-hidden {
     backface-visibility: hidden;
   }
+  .perspective-1000 {
+    perspective: 1000px;
+  }
+  .rotate-y-180 {
+    transform: rotateY(180deg);
+  }
+  .backface-hidden {
+    backface-visibility: hidden;
+  }
 }
 
